--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "postcss": ">=8.4.31"
+  },
+  "resolutions": {
+    "nth-check": "2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
